--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Format check
         run: npm run format
 
+      - name: Test
+        run: npm test
+
       - name: Build
         run: npm run build
