Chore: add docker build gate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,6 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Docker build
+        run: docker build -t math-tutor-site:ci .
